@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-2.6.37-r2 (11 Mar 2011)
+
+  11 Mar 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.37-r2.ebuild:
+  Version Bump
+
 *lh-sources-2.6.37-r1 (27 Feb 2011)
 
   27 Feb 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.37-r1.ebuild:
